--- a/index.css
+++ b/index.css
@@ -1,37 +1,44 @@
-body{
+body {
     text-align: center;
-  }
+}
 
 .a {
     font-family: "Grey Qo", cursive;
     font-weight: 400;
     font-style: normal;
-  }
+}
 
 .f {
     font-family: "Macondo", cursive;
     font-weight: 400;
     font-style: normal;
-      }      
+}
 
-  .carousel {
-    position: relative; width: 100%;
+.carousel {
+    position: relative;
+    width: 100%;
     max-width: 600px;
     margin: 0 auto;
-    }
+}
+
 .carousel-inner {
-    position: relative; overflow: hidden;
+    position: relative;
+    overflow: hidden;
     width: 100%;
-    }
+}
+
 .carousel-inner img {
     display: none;
     width: 100%;
     height: auto;
-    }
+}
+
 .carousel-inner img.active {
     display: block;
-    }
-.prev,.next {
+}
+
+.prev,
+.next {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
@@ -39,21 +46,26 @@ body{
     color: white;
     padding: 10px;
     text-decoration: none;
-    }
+}
+
 .prev {
     left: 10px;
-    }
+}
+
 .next {
     right: 10px;
-    }
-.ho{
+}
+
+.ho {
     max-width: 50%;
     margin: 0 auto;
     border: 1px solid black;
     background-image: url("o.jpg");
     padding: auto;
 }
-.group{
+
+.group {
     max-width: 100%;
     background-color: rgb(232, 184, 109);
 }
+
